CHANGES
=======

3.5.7dev (unreleased)
---------------------

- Feature: added ISkinnable interface which allows us to implement the apply
  skin pattern not only for IBrowserRequest


3.5.6 (2009-02-14)
------------------

Bugs fixed:

* An untested code path that incorrectly attempted to construct a NotFound was
  fixed, with a test.


3.5.5 (2009-02-04)
------------------

* LP #322486: setStatus() now allows any int()-able status value.


3.5.4 (2008-09-22)
------------------

Bugs fixed:

* LP #98440: interfaces lost on retried request

* LP #273296: dealing more nicely with malformed HTTP_ACCEPT_LANGUAGE headers
  within getPreferredLanguages().

* LP #253362: dealing more nicely with malformed HTTP_ACCEPT_CHARSET headers
  within getPreferredCharsets().

* LP #98284: Pass the ``size`` argument to readline, as the version of
  twisted used in zope.app.twisted supports it.

* Fix the LP #98284 fix: do not pass ``size`` argument of None that causes
  cStringIO objects to barf with a TypeError.


3.5.3 (2008-06-20)
------------------

Bugs fixed:

* It turns out that some Web servers (Paste for example) do not send the EOF
  character after the data has been transmitted and the read() of the cached
  stream simply hangs if no expected content length has been specified.


3.5.2 (2008-04-06)
------------------

Bugs fixed:

* A previous fix to handle posting of non-form data broke handling of
  form data with extra information in the content type, as in::

    application/x-www-form-urlencoded; charset=UTF-8

3.5.1 (2008-03-23)
------------------

Bugs fixed:

* When posting non-form (and non-multipart) data, the request body was
  consumed and discarded. This makes it impossible to deal with other
  post types, like xml-rpc or json without resorting to overly complex
  "request factory" contortions.

* https://bugs.launchpad.net/zope2/+bug/143873

  The zope.publisher.http.HTTPCharsets was confused by the Zope 2