@@ -48,9 +48,7 @@ setup(name='zope.publisher',
                         'zope.interface',
                         'zope.location',
                         'zope.proxy',
-                        'zope.security',
-                        'zope.deprecation',
-                        'zope.deferredimport'],
+                        'zope.security'],
       extras_require=dict(
           test=['zope.testing',
                 'zope.app.testing'],
